<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginExample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_username">輸入帳號</string>
    <string name="enter_password">輸入密碼</string>
    <string name="btn_login">登入</string>
    <string name="btn_cancel">取消</string>
	<string name="btn_close">關閉</string>
	<string name="warning">請輸入帳號密碼</string>
	<string name="complete">完成登入</string>
    
</resources>