<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout 
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/warning" />

	    <EditText 
	        android:id="@+id/username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	 		android:hint="@string/enter_username"
	 		android:singleLine="true"/>
	    
	    <EditText 
	        android:id="@+id/password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	 		android:hint="@string/enter_password"
	 		android:inputType="textPassword"
	 		android:singleLine="true"/>
	    
	    <LinearLayout 
	        android:id="@+id/panel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <Button 
	            android:id="@+id/btn_ok"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/btn_login"/>
	        
	        <Button 
	            android:id="@+id/btn_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/btn_cancel"/>
	        
	    </LinearLayout>
    
    </LinearLayout>

</LinearLayout>